--- a/platformio.ini
+++ b/platformio.ini
@@ -33,7 +33,7 @@ framework = arduino
 
 build_flags =
 	-DCONFIG_ARDUHAL_LOG_COLORS
-  	-D CORE_DEBUG_LEVEL=5 ; 5 - verbose
+  	-D CORE_DEBUG_LEVEL=5 ; 5 - verbose, 0 - off
 	-D ARDUINOJSON_USE_DOUBLE=0
 	-D ARDUINOJSON_USE_LONG_LONG=0
 
